[package]
name = "pinocchio_escrow_lib"
version = "0.1.0"
edition = "2021"
description = "A Solana escrow program library built with Pinocchio"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
pinocchio = "0.8.1"
solana-program = "2.3.0"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
thiserror = "2.0.12"
borsh = "1.5.7"

[dev-dependencies]
pinocchio = { path = "../pinocchio" }
pinocchio-log = { path = "../pinocchio-log" }
pinocchio-pubkey = { path = "../pinocchio-pubkey" }
pinocchio-system = { path = "../pinocchio-system" }
pinocchio-token = { path = "../pinocchio-token" }
five8_const = "1.0.0"
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
